Fix contrast

--- a/server/vars.css
+++ b/server/vars.css
@@ -50,7 +50,7 @@
   --teaser-alt-second-button-hover-color: #fff;
 
   --teaser-alt-text-color: black;
-  --teaser-alt-pre-title-color: #607d8b;
+  --teaser-alt-pre-title-color: #222;
   --teaser-alt-pre-title-font-size: .625em;
   --teaser-alt-pre-title-font-weight: 400;
   --teaser-alt-pre-title-text-transform: uppercase;
